# onnx-tensorrt

./: Arange.cu  Arange.hpp  CMakeLists.txt  DCNv2.cpp  DCNv2.hpp  ElementWiseMul.cu  ElementWiseMul.hpp  Equal.cu  Equal.hpp  Expand.cu  Expand.hpp  GridSampler.cu  GridSampler.hpp  Mish.cu  Mish.hpp  ModelImporter.cpp  ReduceSum.cu  ReduceSum.hpp  ResizeBilinear.cu  ResizeNearest.cu  Slice.cu  Slice.hpp  TopK.cu  TopK.hpp  builtin_op_importers.cpp  builtin_plugins.cpp  dcn_v2_im2col_cuda.cu  main.cpp  make.sh  onnx2trt_utils.hpp
test/: CMakeLists.txt  main.cpp  make.sh  model.trt  net.cpp  net.h  trt_check  utils.cpp  utils.h
test/data/: 2.trt  2.txt  ooo.txt  outPytorch.txt  out_2.txt
